# school_stuff

./: .breakpoints  .replit  LICENSE_APPENDIX  README.md  pyproject.toml
copying_flake/: main.py
python/2018_world_cup/: main.py  quiz.py
python/DYWYPI/: main.py
python/airport_operator/: main.py
python/approaching/: main.py
python/attendance_list/: attendance.txt  classlist.txt  main.py
python/back_to_the_future/: main.py
python/beanstalk/: main.py
python/birthday_paradox/: main.py  ran
python/birthday_project/: main.py
python/blackjack/: main.py
python/classes_triangle_permimeter_calc/: main.py
python/colorama_test/: main.py
python/countdown_ex/: main.py
python/cube_calc/: main.py
python/date_day_difference/: main.py
python/dictionary_excersices/: main.py
python/draw_line/: main.py
python/draw_star/: main.py
python/draw_x/: main.py
python/file_manip/: demofile.txt  demofile2.txt  demofile3.txt  main.py
python/file_teams/: 2teams.py  main.py  players.txt  teams.txt
python/files_intro/: drinks.txt  main.py  poisons.txt
python/friends/: main.py
python/functions_subroutines/: main.py
python/grader/: main.py
python/hello world/: main.py
python/if_else_assignment/: main.py
python/madlib/: main.py
python/math_quiz/: main.py
python/min_max_sorter/: main.py
python/my_first_class/: main.py
python/name_by_turtle/: main.py
python/perimeter_calc/: main.py
python/planet_weight_calc/: main.py
python/presidents/: main.py  presidents.txt  presidents_backup.txt
python_test/: guess_game.py  notes.txt  turtle_test.py
(+25 files in other folders)
